2004-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/text.tcl (::tk::TextTranspose): Ensure that Transpose is
	an atomic op to undo.  Replace 'string compare' with 'ne'.

2004-08-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (EatSpuriousMessageBugFix): Fix a problem with
	double clicks in file dialogs falling through to the window
	underneath in win32. [Patch #611615]

	* win/tkWinDialog.c (Tk_MessageBoxObjCmd): Inherit the icon from
	* win/tkWinInt.h:                          the -parent window for
	* win/tkWinWm.c (TkWinGetIcon):            the MessageBox.

2004-08-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkPanedWindow.c (optionSpecs): Add missing GEOMETRY flag
	to -handlepad option. [Bug 1010938]

2004-08-10  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c: Fix for #1006686 "wm resizable command 
	not working on Solaris/CDE" (patch from Colin McDonald).

2004-08-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/canvText.test:
	* win/tkWinFont.c (Tk_MeasureChars): Fix for text
	wrapping problem that appeared using canvas text
	under Win32. A long wrapping string that had
	leading spaces was being incorrectly wrapped.
	This change makes the Win32 implementation behave
	the same as the Unix implementation. [Patch 1006286]

2004-08-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): Clean the code
	up a bit and add a few more comments.
	(Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): Clarified the code,
	corrected the compositing rule now that I have looked up what the
	right thing to do is, and factorized out the compositing rule code
	into a few simpler macros.

2004-07-30  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure:
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Darwin: instead of setting PLAT_OBJS 
	to explict object files in tcl.m4, refer to MAC_OSX_OBJS makefile var.

2004-07-29  Don Porter	<dgp@users.sourceforge.net>
